2007-01-12  Akim Demaille  <demaille@gostai.com>

	Fix
	* ull-fixed-point.cc: Remove a trailing #endif.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Warning fix
	* semaphore.hxx: Don't name useless arguments.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Fix semaphore on Windows
	* semaphore.hxx: Another typo in var name.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Fix test suite
	* tests/singleton1.cc, tests/singleton2.cc: namespace fixes.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Fix semaphores on OSX
	* semaphore.hxx: Typo in a var name.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Semaphore cleanup
	* semaphore.hh, semaphore.hxx (Semaphore::sem): Rename as...
	(Semaphore::sem_): this.
	(Semaphore::counter_): remove, should be a simple static variable.
	Do not use assert to check the return value of code that must
	be run.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	urbi -> libport
	* fwd.hh, lockable.hh, semaphore.hh, semaphore.hxx,
	* singleton-ptr.hh, thread.hh: Move these in the libport namespace.

2006-12-27  Akim Demaille  <akim.demaille@free.fr>

	ref-pt: const copy
	* libport/ref-pt.hh (copy): Add a const one.
	(cpt): Private mutable.
	(p): Private.

2006-12-27  Matthieu Nottale  <nottale@gostai.com>

	Fix semaphore bug under linux/windows
	* semaphore.hxx: new the sem_t* in ctor.

2006-12-27  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix installation directory.
	* libport.mk: install sys/stat.h under libport/sys/stat.h. We cannot
	  use nobase_ here so libportsysdir is defined to be libportdir/sys.

2006-12-23  Akim Demaille  <demaille@gostai.com>

	Remove debugging output
	* utime.hh: here.

2006-12-21  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	List sys/stat.h in libport.mk
	* libport.mk (libport_HEADERS): Here.

2006-12-21  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Wrap sys/stat.h.
	* sys/stat.h: New.
	* sys: New.

2006-12-20  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
