@@ -1,3 +1,9 @@
+2007-01-17  Akim Demaille  <akim.demaille@free.fr>
+
+	compiler.hh
+	* compiler.hh: New.
+	* libport.mk: Ship it.
+
 2007-01-12  Akim Demaille  <demaille@gostai.com>
 
 	Fix
